# AI_GAMEMASTER

./: .dockerignore  .gitignore  DISCORD_COMMANDS.md  README.md  alembic.ini  pyproject.toml  streamlit_app.py
alembic/: env.py
deploy/: Dockerfile  README.md  docker-compose.bot.yml  docker-compose.db.yml  docker-compose.optional.yml  docker-compose.web.yml
docs/: API_CONTRACTS_AND_VERSIONING.md  AUTH_AND_ROLES.md  BOT_MANAGEMENT.md  DEPLOYMENT_HARDENING.md  DISCORD_COMMANDS.md  FULL_README.md  GAMEPLAY_KNOWLEDGE.md  HA_DR_RUNBOOK.md  HEALTH_AND_LOGS.md  INSTALLERS_AND_STARTUP.md  LLM_SETUP.md  LOGGING_COVERAGE_CHECKLIST.md  LOG_SCHEMA.md  LONG_HORIZON_MEMORY.md  MODEL_EVAL.md  SLO_SLI_ALERTING.md  STREAMLIT_MANAGEMENT_UI.md  WORLD_MODEL.md
scripts/: backup_db.py  backup_restore_drill.py  benchmark_modes.py  diagnostics_bundle.py  install_amazon_linux_stack.sh  install_bot_stack.ps1  install_bot_stack.sh  install_cloud_stack.sh  install_db_stack.ps1  install_db_stack.sh  install_debian_stack.sh  install_llm_stack.ps1  install_llm_stack.sh  install_ubuntu_stack.sh  install_web_stack.ps1  install_web_stack.sh  install_windows_stack.ps1  load_test_turns.py  model_eval_cases.json  model_eval_regression.py  nightly_soak.py  restore_db.py  rotate_local_secrets.py  run_tests.ps1  setup_local_test_env.ps1  start_discord_bot_local.ps1  start_local_stack.ps1  start_streamlit_local.ps1  validate_installers.ps1
sql/: 001_init.sql
tests/: test_admin_audit_logs.py  test_ai_raw_output_schema.py  test_api_integration.py  test_auth_rbac.py  test_backup_crypto.py  test_db_api.py  (+25 more)
(+37 files in other folders)
